<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- home strings -->

    <string name="app_name">Ruff Pets</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="search_string">Search</string>
    <string name="ruff_pets_string">Ruff Pets</string>
    <string name="dog_supplies_string">Dog Supplies</string>
    <string name="v_ng_c__cho_ch__string">Vng c cho ch</string>
    <string name="_100_000_vn__string">100.000 VN</string>
    <string name="b_t___ng_th_c__n__n__c_string">Bt ng thc n</string>
    <string name="_100_000_vn__ek1_string">100.000 VN</string>
    <string name="_o_cho_ch__string">o cho ch</string>
    <string name="_100_000_vn__ek2_string">100.000 VN</string>
    <string name="ki_m_c_t_m_ng_string">Kim ct mng</string>
    <string name="_100_000_vn__ek3_string">100.000 VN</string>
    <string name="l__t_ch_i_l_ng_string">Lt chi lng</string>
    <string name="_100_000_vn__ek4_string">100.000 VN</string>
    <string name="__th_c__n_cho_ch__string">Thc n cho ch</string>
    <string name="_100_000_vn__ek5_string">100.000 VN</string>
    <string name="search_ek2_string">Search</string>
    <string name="ruff_pets_ek1_string">Ruff Pets</string>
    <string name="buy_puppies_string">Buy Puppies</string>
    <string name="__th_c__n_cho_ch__ek1_string">Ch con 1 thng</string>
    <string name="_100_000_vn__ek6_string">100.000 VN</string>
    <string name="__th_c__n_cho_ch__ek2_string">Ch con 2 thng</string>
    <string name="_100_000_vn__ek7_string">100.000 VN</string>
    <string name="__th_c__n_cho_ch__ek3_string">Ch con 1 thng</string>
    <string name="_100_000_vn__ek8_string">100.000 VN</string>
    <string name="__th_c__n_cho_ch__ek4_string">Ch con 2 thng</string>
    <string name="_100_000_vn__ek9_string">100.000 VN</string>
    <string name="__th_c__n_cho_ch__ek5_string">Ch con 1 thng</string>
    <string name="_100_000_vn__ek10_string">100.000 VN</string>
    <string name="__th_c__n_cho_ch__ek6_string">Ch con 1 thng</string>
    <string name="_100_000_vn__ek11_string">100.000 VN</string>
    <string name="search_ek4_string">Search</string>
    <string name="ruff_pets_ek2_string">Ruff Pets</string>
    <string name="spa_service_string">Spa Service</string>
    <string name="d_ch_v__t_m_r_a_cho_ch__string">Dch v tm ra cho ch</string>
    <string name="_100_000_vn__ek12_string">100.000 VN</string>
    <string name="d_ch_v__c_t_t_a_l_ng_ch__string">Dch v ct ta lng ch</string>
    <string name="_100_000_vn__ek13_string">100.000 VN</string>
    <string name="ruff_pets_ek3_string">Ruff Pets</string>
    <string name="profile_string">Profile</string>
    <string name="tr_n_quang_huy_string">Trn Quang Huy</string>
    <string name="edit_profile_string">Edit profile</string>
    <string name="my_dogs_string">My dogs</string>
    <string name="hana_string">Hana</string>
    <string name="bobby_string">Bobby</string>
    <string name="audo_string">Audo</string>
    <string name="add_string">Add</string>
    <string name="s_n_ph_m____mua_string">Sn phm  mua</string>
    <string name="__n_h_ng_c_a_t_i_string">n hng ca ti</string>
    <string name="xem_l_ch_s__string">Xem lch s</string>
    <string name="ch__thanh_to_n_string">Ch thanh ton</string>
    <string name="_ang___ng_g_i_string">ang ng gi</string>
    <string name="_ang_v_n_chuy_n_string">ang vn chuyn</string>
    <string name="___xem_string"> xem</string>
    <string name="tr__gi_p_string">Tr gip</string>
    <string name="danh_s_ch_c_a_h_ng_string">Danh sch ca hng</string>
    <string name="xem_th_m_string">Xem thm</string>
    <string name="__ng_xu_t_string"><u>ng xut</u></string>
    <string name="male_string">Male</string>
    <string name="ch__con_string">Ch con</string>
    <string name="h_i_ch_u_____n_ng_string">Hi Chu,  Nng</string>
    <string name="_1_th_ng_tu_i_string">1 thng tui</string>
    <string name="_100_000_vn__ek14_string">100.000 VN</string>
    <string name="chi_ti_t_string">Chi tit</string>
    <string name="breed_string">Breed</string>
    <string name="corgi_string">Corgi</string>
    <string name="color_string">Color</string>
    <string name="gold_string">Gold</string>
    <string name="weight_string">Weight</string>
    <string name="_3kg_string">3Kg</string>
    <string name="li_n_h__string">Lin h</string>
    <string name="d_ch_v__t_m_r_a_cho_ch__ek1_string">Dch v tm ra cho ch</string>
    <string name="h_i_ch_u_____n_ng_ek1_string">Hi Chu,  Nng</string>
    <string name="_100_000_vn__ek15_string">100.000 VN</string>
    <string name="chi_ti_t_ek1_string">Chi tit</string>
    <string name="li_n_h__ek1_string">Lin h</string>
    <string name="v_i_quy_tr_nh_t_m_kh__m_i_h_i__d__ng_d_u_x__m_m_m__t__v__sinh_tai__s_y_v__ch_i_l_ng__c_t_m_i_m_ng__g__r_i_v__ch_i_l_ng_r_ng_c_a_ch_ng_t_i_s__l_m_cho_v_t_nu_i_c_a_c_c_b_n_s_ch_s___th_m_tho_h_n_string">
        Với quy trình tắm khử mùi hôi, dưỡng dầu xả mềm mượt, vệ sinh tai, sấy và chải lông, cắt mài móng, gỡ rối và chải lông rụng của chúng tôi sẽ làm cho vật nuôi của các bạn sạch sẽ, thơm tho hơn</string>
    <string name="xs_string">XS</string>
    <string name="v_ng_c__cho_ch__ek1_string">Vng c cho ch</string>
    <string name="h_i_ch_u_____n_ng_ek2_string">Hi Chu,  Nng</string>
    <string name="h_i_ch_u_____n_ng_ek3_string">Hi Chu,  Nng</string>
    <string name="_100_000_vn__ek16_string">100.000 VN</string>
    <string name="ghn__1___2_ng_y__string">GHN (1 - 2 ngy)</string>
    <string name="_15_000_vn__string">15.000 vn</string>
    <string name="l_a_ch_n_string">La chn</string>
    <string name="h_nh_th_c_giao_string">Hnh thc giao</string>
    <string name="m_string">M</string>
    <string name="l_string">L</string>
    <string name="xl_string">XL</string>
    <string name="s_string">S</string>
    <string name="mua_ngay_string">Mua ngay</string>
    <string name="edit_profile_ek1_string">Edit Profile</string>
    <string name="huyheopro_gmail_com_string">huyheopro@gmail.com</string>
    <string name="email_address_string">Email address</string>
    <string name="_0987654321_string">0987654321</string>
    <string name="phone_number_string">Phone number</string>
    <string name="huy_heo_string">Huy heo</string>
    <string name="nick_name_string">Nick name</string>
    <string name="ok_string">OK</string>
    <string name="change_password_string">Change password</string>
    <string name="gi__h_ng_c_a_t_i_string">Gi hng ca ti</string>
    <string name="v_ng_c__ch__string">Vng c ch</string>
    <string name="xl_ek1_string">XL</string>
    <string name="_100_000_vn__ek17_string">100.000 VN</string>
    <string name="_1_string">1</string>
    <string name="thanh_to_n_string">Thanh ton</string>
    <string name="ph__v_n_chuy_n__string">Ph vn chuyn:</string>
    <string name="t_t_c__string">Tt c</string>
    <string name="t_ng_c_ng__string">Tng cng:</string>
    <string name="_100_000___string">100.000 </string>
    <string name="_0___string">0 </string>
    <string name="email_address_ek1_string">Email Address</string>
    <string name="password_string">Password</string>
    <string name="log_in_string">Log in</string>
    <string name="_register__string"><u>Register?</u></string>
    <string name="_reset_pass__string"><u>Reset password?</u></string>
    <string name="log_in_ek1_string">Log In</string>
    <string name="email_address_ek2_string">Email Address</string>
    <string name="password_ek1_string">Password</string>
    <string name="re_enter_password_string">Re-Enter Password</string>
    <string name="register_string">Register</string>
    <string name="_log_in__string"><u>Log in?</u></string>
    <string name="register_ek1_string">Register</string>
    <string name="change_password_ek1_string">Change password</string>
    <string name="reset_password_ek1_string">Reset password</string>
</resources>